server/server/kube/transactor.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactor
  template:
    metadata:
      labels:
        app: transactor
    spec:
      containers:
        - name: app
          image: anticrm/transactor
          ports:
            - containerPort: 3333
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: transactor
spec:
  selector:
    app: transactor
  ports:
    - port: 80
      targetPort: 3333
